Really fix overlapping buttons

--- a/css/common.css
+++ b/css/common.css
@@ -34,7 +34,7 @@ nav a.current {
     box-sizing: content-box;    
     width: 100px;
     height: 20px;
-    padding: 10px 15px 10px 15px;    
+    padding: 10px 15px 10px 15px;
     border: 5px solid white;
     border-radius: 18px 0px;
 }
@@ -42,9 +42,9 @@ nav a.latent {
     color: white;
     text-decoration: none;
     box-sizing: content-box;    
-    width: 500px;
-    height: ;
-    padding: 10px 15px 10px 15px;    
+    width: auto;
+    height: auto;
+    padding: 10px 15px 10px 15px;
     border: 5px solid white;
 }
 nav a.latent:hover {
@@ -54,13 +54,14 @@ nav a.latent:hover {
     box-sizing: content-box;    
     width: 500px;
     height: 20px;
-    padding: 10px 15px 10px 15px;    
+    padding: 10px 15px 10px 15px;
     border: 5px solid white;
     border-radius: 18px 0px;
 }
 .nav > li {
     display: inline-block;
-    Smargin: 18px 0 18px 0;
+    margin: 18px 0 18px 0;
+  }
 }
 .nav-top {
     font-size: 1.5rem;
